<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@color/brown">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_item_back_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:gravity="center"
            app:icon="@drawable/baseline_chevron_left_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="32dp"
            app:iconTint="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/add_item_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="Add Item"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_item_confirm_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"
            app:icon="@drawable/baseline_check_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="32dp"
            app:iconTint="@color/white" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="32dp"
            tools:context=".MainActivity">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/add_item_error_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/defaultError"
                android:textColor="@color/red"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_description_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Brief Description"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_date_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date Acquired"
                app:endIconDrawable="@drawable/baseline_calendar_month_24"
                app:endIconMode="custom"
                app:endIconTint="@color/brown"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_item_cost_layout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Estimated Value"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Add Photos"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/add_photo_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Make"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_make"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="70" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Model"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="70" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:hint="Serial Number"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_item_serial_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_item_scan_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="32dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:icon="@drawable/baseline_barcode_scanner_24"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="32dp"
                    app:iconTint="@color/brown" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Comment"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_item_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="280" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_item_clear_button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:background="@drawable/delete_button_border"
                android:layout_gravity="center"
                android:text="Clear All"
                android:paddingVertical="10dp"
                android:paddingHorizontal="24dp"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:visibility="gone">
            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

    </ScrollView>

</LinearLayout>