<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="8dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:elevation="4dp"
        android:background="@drawable/rounded_background">


        <CheckBox
            android:id="@+id/item_checkBox"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:background="@color/offWhite"/>

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/item_checkBox"
            android:layout_toStartOf="@id/right_text_layout"
            android:orientation="vertical"
            android:background="@color/offWhite"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/item_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingTop="8dp"
                android:textColor="@color/black"
                android:text="Brief Description"
                android:layout_marginBottom="3dp"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_make_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="75dp"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:text="12345678910"
                    android:gravity="center_vertical"/>
                <View
                    android:layout_width="1dp"
                    android:layout_marginHorizontal="8dp"
                    android:id="@+id/make_tag_divider"
                    android:layout_height="14dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="1dp"
                    android:background="@color/darkGrey" />
                <TextView
                    android:id="@+id/item_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="12345678910"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:maxWidth="80dp"
                    android:textSize="14sp"
                    android:textColor="@color/darkGrey"
                    android:textStyle="bold"
                    android:paddingHorizontal="14dp"
                    android:background="@drawable/rounded_border"/>
                <TextView
                    android:id="@+id/item_extra_tags_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="@color/darkGrey"
                    android:text="+567"
                    android:gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:background="@color/offWhite">

            <TextView
                android:id="@+id/item_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingTop="12dp"
                android:text="yyyy-mm-dd"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_cost_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAlignment="textEnd"
                android:paddingTop="5dp"
                android:text="$xx.xx"
                android:textColor="#4CAF50"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>