<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/brown"
    android:orientation="vertical"
    android:paddingVertical="4dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/camera_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:text="Take photo"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:icon="@drawable/baseline_camera_alt_24"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:iconTint="@color/white" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="4dp"
        app:dividerColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gallery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:textSize="18sp"
        android:text="Select from gallery"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:icon="@drawable/baseline_insert_photo_24"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:iconTint="@color/white" />

</LinearLayout>
